fix styling bug keeping dropdown and tag list from playing nicely with each other. styling todo: fix breakpoints to account for filter size on top row and split the dropdown and taglist on small screens

--- a/src/assets/scss/modules/_item_list.scss
+++ b/src/assets/scss/modules/_item_list.scss
@@ -147,12 +147,12 @@ The Item list is the container and list of items for trade
   background: $white;
   padding: rem-calc(20px);
   margin-bottom: rem-calc(6px);
-  flex: 8;
+  width: 75%;
 }
 
 /**City Dropdown**/
 .item-list-dropdown {
-  flex: 2;
+  width: 25%;
   padding: 1.25rem 0 0 1.25rem;
   margin-bottom: 0.375rem;
   background: $white;
